eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  namespace: neo
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: public.ecr.aws/e3t6z9s8/simplebank:7ba25af1a7c6ea14bfd78bdefce9966388daa1e3
        ports:
        - containerPort: 8080
